@@ -1,3 +1,10 @@
+2016-01-21  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	Backported from mainline
+	2015-07-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* gcc.target/s390/gpr2fprsavecfi.c: New test.
+
 2016-01-21  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	Backport from mainline
